--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,13 @@
 			<artifactId>spring-boot-starter-webmvc-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20240303</version>
+        </dependency>
 	</dependencies>
+
 
 	<build>
 		<plugins>
