--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,13 @@
 spring.application.name=SEOP
 
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:postgresql://localhost:5432/seop_db
+spring.datasource.username=seop_user
+spring.datasource.password=seop_password
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.datasource.url=jdbc:h2:mem:seoprodb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 openai.api.key=INSIRA-SUA-CHAVE-AQUI
-
-
-
